--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,11 @@
     <string name="inference_time_placeholder">推理耗时：--</string>
     <string name="inference_time_ms">推理耗时：%1$d ms</string>
     <string name="ok">确定</string>
-    <string name="play_raw_buffer">播放原始10秒</string>
-    <string name="play_processed_buffer">播放降噪后10秒</string>
+    <string name="play_raw_buffer">播放降噪前声音</string>
+    <string name="play_processed_buffer">播放降噪后声音</string>
+    <string name="save_buffers">保存当前音频</string>
+    <string name="save_buffers_success">已保存缓冲区</string>
+    <string name="save_buffers_failed">保存失败</string>
     <string name="no_buffer_available">暂无可播放的缓冲数据</string>
     <string name="playing_buffer">正在回放缓冲区</string>
     <string name="scene_switch_title">模式切换</string>
